# rag_model_chatbot_with_multi_functions_calling

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SHOWCASE.md  README.md  docker-compose.yml  document.txt  knowledge_based_chatbot.py  pyproject.toml  requirements.txt  setup.py  web_knowledge_chatbot.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
common/: agent_functions.py  agent_templates.py  business_logic.py  meeting_modular.py  prompt_templates.py
knowledge/: 01-company-introduction.mdx  02-strategy-one-elevate-coffee-game.mdx  03-what-you-will-learn.mdx  04-specialty-coffee-journey.mdx  05-origin-beans-flavor-profile.mdx  06-ordering-storing-coffee-fresh.mdx  07-pick-perfect-roaster.mdx  08-case-study-fracpacks.mdx  09-strategy-four-coffee-menu-design.mdx  10-strategy-five-grow-your-brand.mdx  11-about-founders-company.mdx  12-for-restaurants-groups-chains.mdx  13-30-second-fix-profit-win.mdx  14-successful-coffee-program-skipper.mdx  15-difference-good-great-coffee-calibration.mdx  16-espresso-machine-heartbeat.mdx  17-playbook-tip-simple-menu.mdx  18-specialty-coffee-playbook-launch.mdx  19-coffee-fest-nyc-coming-hot.mdx  20-we-dont-push-brand-wrap-around-yours.mdx  21-how-design-your-team.mdx  22-sales-improvement-strategies.mdx  23-pricing-strategies-profit-optimization.mdx  24-customer-experience-retention.mdx  25-operational-efficiency-sales.mdx  enhanced_coffee_knowledge_handler.py
static/: index.html  script.js  style.css
tests/: __init__.py  conftest.py
